@@ -1,4 +1,4 @@
-The following have contributed to rivendell-browser:
+The following have contributed to rivendell-producer:
 
 Application Architect:
 	Fred Gleason <fredg@paravelsystems.com>
