@@ -1,11 +1,11 @@
-This is the README file for the rivendell-browser package.
+This is the README file for the rivendell-producer package.
 
 This software comes with ABSOLUTELY NO WARRANTY.  See the file 'COPYING' for
 details.
 
 See the file 'INSTALL' for instructions on building from source.
 
-Rivendell-browser is a collection of applets for remotely accessing a Rivendell
+Rivendell-producer is a collection of applets for remotely accessing a Rivendell
 system.
 
  
