@@ -1,12 +1,0 @@
-; rivendell-browser.conf
-;
-; This is the configuration file for the Rivendell-browser package.
-;
-
-[Server]
-Hostname=localhost
-Username=user
-Password=
-
-[Audio]
-DeviceName=hw:0
