@@ -1,0 +1,12 @@
+; rivendell-producer.conf
+;
+; This is the configuration file for the Rivendell-producer package.
+;
+
+[Server]
+Hostname=localhost
+Username=user
+Password=
+
+[Audio]
+DeviceName=hw:0
