@@ -20,7 +20,7 @@ dnl   License along with this program; if not, write to the Free Software
 dnl   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 dnl
 
-AC_INIT(rivendell-browser,m4_esyscmd(cat PACKAGE_VERSION))
+AC_INIT(rivendell-producer,m4_esyscmd(cat PACKAGE_VERSION))
 AM_INIT_AUTOMAKE
 AC_SUBST(RPM_RELEASE,1)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
@@ -134,8 +134,8 @@ AC_CONFIG_FILES([ \
     src/rdlogeditb/Makefile \
     xdg/Makefile \
     Makefile \
-    rivendell-browser.nsi \
-    rivendell-browser.spec \
+    rivendell-producer.nsi \
+    rivendell-producer.spec \
 ])
 AC_OUTPUT()
 
@@ -148,7 +148,7 @@ AC_OUTPUT()
 
 AC_MSG_NOTICE()
 AC_MSG_NOTICE("|-----------------------------------------------------|")
-AC_MSG_NOTICE("|   *** RIVENDELL-BROWSER CONFIGURATION SUMMARY ***   |")
+AC_MSG_NOTICE("|   *** RIVENDELL-PRODUCER CONFIGURATION SUMMARY ***  |")
 AC_MSG_NOTICE("|-----------------------------------------------------|")
 AC_MSG_NOTICE("| Audio Outputs:                                      |")
 if test -z $USING_ALSA ; then
