@@ -1,6 +1,6 @@
 // rdlibraryb.h
 //
-// Remote cart browser for Rivendell
+// Remote cart producer for Rivendell
 //
 //   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
 //
