@@ -1,3 +1,3 @@
-The NEWS file for the rivendell-browser package.
+The NEWS file for the rivendell-producer package.
 
 -------------------------------------------------------------------------------
